<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.10</version>
    </parent>

    <version>1.0.0</version>
    <name>java-spring-webflux-sample</name>
    <artifactId>java-spring-webflux-sample</artifactId>
    <description>java-spring-webflux-sample</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <sonar.exclusions>
            src/main/java/com/webflux/sample/config/*.java
            src/main/java/com/webflux/sample/document/*.java
            src/main/java/com/webflux/sample/dto/*.java
            src/main/java/com/webflux/sample/model/*.java
            src/main/java/com/webflux/sample/exception/*.java
            src/main/java/com/webflux/sample/handler/*.java
            src/main/java/com/webflux/sample/repository/*.java
            src/main/java/com/webflux/sample/WebFluxSampleApplication.java
            src/main/java/com/webflux/sample/service/ExceptionService.java
            src/main/java/com/webflux/sample/service/FreeService.java
            src/main/java/com/webflux/sample/service/WebClientSampleService.java
            src/main/java/com/webflux/sample/service/WebFluxSampleService.java
        </sonar.exclusions>
    </properties>

    <dependencies>

        <!--SPRING BOOT WEB FLUX-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
            <!--<exclusions>
                <exclusion>
                    <artifactId>spring-boot-starter-logging</artifactId>
                    <groupId>org.springframework.boot</groupId>
                </exclusion>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>-->
        </dependency>
        <!--<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>-->

        <!--SPRING SECURITY-->
        <!--<dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>-->

        <!--JWT-->
        <!--<dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>9.0.1</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.9.0</version>
        </dependency>-->

        <!--MONGODB REACTIVE-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
        </dependency>

        <!--VALIDATION-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!--LOMBOK-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
            <scope>provided</scope>
        </dependency>

        <!--JAKARTA-->
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>

        <!--JACKSON-->
        <!--Core -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.17.3</version>
        </dependency>
        <!--Annotations-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.17.3</version>
        </dependency>
        <!--Nullable-->
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.6</version>
        </dependency>
        <!--Databind-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.3</version>
        </dependency>

        <!--OPENAPI-->
        <dependency>
            <groupId>io.swagger.codegen.v3</groupId>
            <artifactId>swagger-codegen-maven-plugin</artifactId>
            <version>3.0.62</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-core</artifactId>
            <version>2.2.21</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
        </dependency>

        <!--BLOCK HOUND-->
        <dependency>
            <groupId>io.projectreactor.tools</groupId>
            <artifactId>blockhound</artifactId>
            <version>1.0.10.RELEASE</version>
        </dependency>

        <!--TESTS-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>android-json</artifactId>
                    <groupId>com.vaadin.external.google</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <!--maven-resources-plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!--maven-compiler-plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <!--spring-boot-maven-plugin-->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--maven-surefire-plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <parallel>none</parallel>
                    <argLine>
                        <!--Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended-->
                        -ea
                        -Xshare:off
                        -XX:+EnableDynamicAgentLoading
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        <!--BlockHound: Java 13+-->
                        -XX:+AllowRedefinitionToAddDeleteMethods
                    </argLine>
                </configuration>
            </plugin>
            <!--srcclr-maven-plugin-->
            <plugin>
                <groupId>com.srcclr</groupId>
                <artifactId>srcclr-maven-plugin</artifactId>
                <version>3.1.24</version>
                <configuration>
                    <upload>true</upload>
                    <verbose>false</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>srcclr-scan</id>
                        <phase>none</phase>
                        <goals>
                            <goal>scan</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--versions-maven-plugin-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
            <!--openapi-generator-maven-plugin-->
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.10.0</version>
                <executions>
                    <execution>
                        <id>person</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>src/main/resources/openapi/OPENAPI-SAMPLE-STRUCTURE-PERSON.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <modelPackage>com.webflux.sample.model</modelPackage>
                            <apiPackage>com.webflux.sample.person.api</apiPackage>
                            <configOptions>
                                <useJakartaEe>true</useJakartaEe>
                                <useSpringBoot3>true</useSpringBoot3>
                                <generateSupportingFiles>false</generateSupportingFiles>
                                <sourceFolder>gen</sourceFolder>
                                <interfaceOnly>true</interfaceOnly>
                                <reactive>true</reactive>
                                <skipDefaultInterface>true</skipDefaultInterface>
                            </configOptions>
                            <templateDirectory>
                                ${project.basedir}/src/main/resources/openapi/templates
                            </templateDirectory>
                            <generateModelTests>false</generateModelTests>
                            <generateApiTests>false</generateApiTests>
                        </configuration>
                    </execution>
                    <execution>
                        <id>person_details</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>src/main/resources/openapi/OPENAPI-SAMPLE-STRUCTURE-PERSON-DETAILS.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <modelPackage>com.webflux.sample.model</modelPackage>
                            <apiPackage>com.webflux.sample.person-details.api</apiPackage>
                            <configOptions>
                                <useJakartaEe>true</useJakartaEe>
                                <useSpringBoot3>true</useSpringBoot3>
                                <generateSupportingFiles>false</generateSupportingFiles>
                                <sourceFolder>gen</sourceFolder>
                                <interfaceOnly>true</interfaceOnly>
                                <reactive>true</reactive>
                                <skipDefaultInterface>true</skipDefaultInterface>
                                <dateLibrary>java7</dateLibrary>
                                <java8>true</java8>
                                <dateLibrary>joda</dateLibrary>
                                <serializableModel>true</serializableModel>
                            </configOptions>
                            <templateDirectory>
                                ${project.basedir}/src/main/resources/openapi/templates
                            </templateDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>